switch from filter state to dynamic metadata add support in stream info formatter and an integration test
Signed-off-by: Elisha Ziskind <eziskind@google.com>

--- a/source/extensions/filters/listener/tls_inspector/BUILD
+++ b/source/extensions/filters/listener/tls_inspector/BUILD
@@ -27,6 +27,9 @@ envoy_cc_library(
     srcs = ["tls_inspector.cc"],
     hdrs = ["tls_inspector.h"],
     external_deps = ["ssl"],
+    visibility = [
+        "//visibility:public",
+    ],
     deps = [
         ":ja4_fingerprint_lib",
         "//envoy/event:dispatcher_interface",
