--- a/source/extensions/bootstrap/reverse_connection_socket_interface/BUILD
+++ b/source/extensions/bootstrap/reverse_connection_socket_interface/BUILD
@@ -47,6 +47,7 @@ envoy_cc_extension(
         "//source/common/network:address_lib",
         "//source/common/network:default_socket_interface_lib",
         "//source/common/protobuf",
+        "@envoy_api//envoy/extensions/bootstrap/reverse_connection_socket_interface/v3:pkg_cc_proto",
     ],
     alwayslink = 1,
 )
