--- a/source/extensions/bootstrap/reverse_tunnel/BUILD
+++ b/source/extensions/bootstrap/reverse_tunnel/BUILD
@@ -1,6 +1,5 @@
 load(
     "//bazel:envoy_build_system.bzl",
-    "envoy_cc_extension",
     "envoy_extension_package",
 )
 
@@ -8,29 +7,5 @@ licenses(["notice"])  # Apache 2
 
 envoy_extension_package()
 
-envoy_cc_extension(
-    name = "reverse_tunnel_acceptor_lib",
-    srcs = ["reverse_tunnel_acceptor.cc"],
-    hdrs = ["reverse_tunnel_acceptor.h"],
-    visibility = ["//visibility:public"],
-    deps = [
-        "//envoy/common:random_generator_interface",
-        "//envoy/network:address_interface",
-        "//envoy/network:io_handle_interface",
-        "//envoy/network:socket_interface",
-        "//envoy/registry",
-        "//envoy/server:bootstrap_extension_config_interface",
-        "//envoy/stats:stats_interface",
-        "//envoy/stats:stats_macros",
-        "//envoy/thread_local:thread_local_object",
-        "//source/common/api:os_sys_calls_lib",
-        "//source/common/common:logger_lib",
-        "//source/common/common:random_generator_lib",
-        "//source/common/network:address_lib",
-        "//source/common/network:default_socket_interface_lib",
-        "//source/common/protobuf",
-        "//source/extensions/bootstrap/reverse_connection_socket_interface:reverse_connection_utility_lib",
-        "@envoy_api//envoy/extensions/bootstrap/reverse_connection_socket_interface/v3:pkg_cc_proto",
-    ],
-    alwayslink = 1,
-)
+# NOTE: The reverse tunnel acceptor implementation lives under
+# //source/extensions/bootstrap/reverse_connection_socket_interface
