--- a/test/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/BUILD
+++ b/test/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/BUILD
@@ -18,13 +18,12 @@ envoy_extension_cc_test(
     srcs = ["reverse_tunnel_acceptor_test.cc"],
     extension_names = ["envoy.bootstrap.reverse_tunnel.upstream_socket_interface"],
     deps = [
-        "//source/common/network:socket_interface_lib",
-        "//source/common/thread_local:thread_local_lib",
+        "//source/common/network:utility_lib",
         "//source/extensions/bootstrap/reverse_tunnel/upstream_socket_interface:reverse_tunnel_acceptor_lib",
         "//test/mocks/event:event_mocks",
         "//test/mocks/server:factory_context_mocks",
+        "//test/mocks/stats:stats_mocks",
         "//test/mocks/thread_local:thread_local_mocks",
-        "//test/test_common:test_runtime_lib",
         "@envoy_api//envoy/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/v3:pkg_cc_proto",
     ],
 )
@@ -34,13 +33,11 @@ envoy_cc_test(
     size = "medium",
     srcs = ["reverse_tunnel_acceptor_extension_test.cc"],
     deps = [
-        "//source/common/network:socket_interface_lib",
-        "//source/common/thread_local:thread_local_lib",
         "//source/extensions/bootstrap/reverse_tunnel/upstream_socket_interface:reverse_tunnel_acceptor_lib",
         "//test/mocks/event:event_mocks",
         "//test/mocks/server:factory_context_mocks",
+        "//test/mocks/stats:stats_mocks",
         "//test/mocks/thread_local:thread_local_mocks",
-        "//test/test_common:test_runtime_lib",
         "@envoy_api//envoy/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/v3:pkg_cc_proto",
     ],
 )
@@ -50,13 +47,12 @@ envoy_cc_test(
     size = "large",
     srcs = ["upstream_socket_manager_test.cc"],
     deps = [
-        "//source/common/network:socket_interface_lib",
-        "//source/common/thread_local:thread_local_lib",
+        "//source/common/network:utility_lib",
         "//source/extensions/bootstrap/reverse_tunnel/upstream_socket_interface:reverse_tunnel_acceptor_lib",
         "//test/mocks/event:event_mocks",
         "//test/mocks/server:factory_context_mocks",
+        "//test/mocks/stats:stats_mocks",
         "//test/mocks/thread_local:thread_local_mocks",
-        "//test/test_common:test_runtime_lib",
         "@envoy_api//envoy/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/v3:pkg_cc_proto",
     ],
 )
@@ -66,14 +62,8 @@ envoy_cc_test(
     size = "medium",
     srcs = ["upstream_reverse_connection_io_handle_test.cc"],
     deps = [
-        "//source/common/network:socket_interface_lib",
-        "//source/common/thread_local:thread_local_lib",
         "//source/extensions/bootstrap/reverse_tunnel/upstream_socket_interface:reverse_tunnel_acceptor_lib",
-        "//test/mocks/event:event_mocks",
-        "//test/mocks/server:factory_context_mocks",
-        "//test/mocks/thread_local:thread_local_mocks",
-        "//test/test_common:test_runtime_lib",
-        "@envoy_api//envoy/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/v3:pkg_cc_proto",
+        "//test/mocks/network:network_mocks",
     ],
 )
 
@@ -82,13 +72,8 @@ envoy_cc_test(
     size = "small",
     srcs = ["config_validation_test.cc"],
     deps = [
-        "//source/common/network:socket_interface_lib",
-        "//source/common/thread_local:thread_local_lib",
         "//source/extensions/bootstrap/reverse_tunnel/upstream_socket_interface:reverse_tunnel_acceptor_lib",
-        "//test/mocks/event:event_mocks",
         "//test/mocks/server:factory_context_mocks",
-        "//test/mocks/thread_local:thread_local_mocks",
-        "//test/test_common:test_runtime_lib",
         "@envoy_api//envoy/extensions/bootstrap/reverse_tunnel/upstream_socket_interface/v3:pkg_cc_proto",
     ],
 )
