downstream interface changes and fixes
Signed-off-by: Basundhara Chakrabarty <basundhara.c@nutanix.com>

--- a/source/extensions/bootstrap/reverse_tunnel/BUILD
+++ b/source/extensions/bootstrap/reverse_tunnel/BUILD
@@ -1,14 +1,16 @@
 load(
     "//bazel:envoy_build_system.bzl",
     "envoy_cc_extension",
+    "envoy_cc_library",
     "envoy_extension_package",
+    "envoy_proto_library",
 )
 
 licenses(["notice"])  # Apache 2
 
 envoy_extension_package()
 
-envoy_cc_extension(
+envoy_cc_library(
     name = "reverse_connection_address_lib",
     srcs = ["reverse_connection_address.cc"],
     hdrs = ["reverse_connection_address.h"],
@@ -20,7 +22,7 @@ envoy_cc_extension(
     ],
 )
 
-envoy_cc_extension(
+envoy_cc_library(
     name = "reverse_connection_resolver_lib",
     srcs = ["reverse_connection_resolver.cc"],
     hdrs = ["reverse_connection_resolver.h"],
@@ -65,8 +67,14 @@ envoy_cc_extension(
         "//source/common/network:filter_lib",
         "//source/common/protobuf",
         "//source/common/upstream:load_balancer_context_base_lib",
-        "@envoy_api//envoy/extensions/bootstrap/reverse_connection_handshake/v3:pkg_cc_proto",
+        ":reverse_connection_handshake_cc_proto",
         "@envoy_api//envoy/extensions/bootstrap/reverse_tunnel/downstream_socket_interface/v3:pkg_cc_proto",
     ],
-    alwayslink = 1,
+            alwayslink = 1,
+    )
+
+# Proto library for internal handshake messages
+envoy_proto_library(
+    name = "reverse_connection_handshake_proto",
+    srcs = ["reverse_connection_handshake.proto"],
 )
