--- a/test/extensions/stats_sinks/open_telemetry/BUILD
+++ b/test/extensions/stats_sinks/open_telemetry/BUILD
@@ -35,6 +35,7 @@ envoy_extension_cc_test(
         "//source/extensions/stat_sinks/open_telemetry:open_telemetry_lib",
         "//test/mocks/grpc:grpc_mocks",
         "//test/test_common:simulated_time_system_lib",
+        "//test/mocks/server:instance_mocks",
     ],
 )
 
