Add support for custom HTTP headers in Zipkin collector requests
This change introduces the collector_request_headers field to ZipkinConfig,
allowing users to add custom headers to HTTP requests sent to the Zipkin
collector. This enables authentication, authorization, and collector-specific
routing capabilities.

The feature includes:
- New collector_request_headers field in ZipkinConfig proto
- CollectorInfo struct updated to store header key-value pairs
- ReporterImpl modified to include headers in HTTP requests
- Comprehensive test coverage for all components
- Documentation updates in tracing overview and FAQ

This is different from custom tags which add metadata to spans;
this feature adds HTTP headers to collector API requests.

Signed-off-by: Prashanth Josyula <prashanth.16@gmail.com>

--- a/test/extensions/tracers/zipkin/BUILD
+++ b/test/extensions/tracers/zipkin/BUILD
@@ -14,6 +14,7 @@ envoy_package()
 envoy_extension_cc_test(
     name = "zipkin_test",
     srcs = [
+        "collector_info_test.cc",
         "span_buffer_test.cc",
         "span_context_extractor_test.cc",
         "tracer_test.cc",
