--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -275,6 +275,12 @@ new_features:
     extract trace information from W3C trace headers when B3 headers are not present (downstream),
     and inject both B3 and W3C trace headers for upstream requests to maximize compatibility.
     The default value ``USE_B3`` maintains backward compatibility with B3-only behavior.
+- area: tracing
+  change: |
+    Added support for custom HTTP headers in Zipkin collector requests via the
+    :ref:`collector_request_headers <envoy_v3_api_field_config.trace.v3.ZipkinConfig.collector_request_headers>`
+    configuration option. This enables authentication, authorization, and collector-specific routing
+    for requests sent to the Zipkin tracing backend.
 - area: rbac
   change: |
     Switch the IP matcher to use LC-Trie for performance improvements.
