wasm: initial tracing functionality
Signed-off-by: Stephan Brunner <s.brunner@stephan-brunner.net>

--- a/source/extensions/common/wasm/BUILD
+++ b/source/extensions/common/wasm/BUILD
@@ -28,6 +28,7 @@ envoy_cc_library(
         "context.h",
         "plugin.h",
         "stats_handler.h",
+        "tracing.h",
         "wasm.h",
         "wasm_vm.h",
     ],
