Introduce host simplification rules
Today, Envoy only supports a single wildcard ("*") in virtual host
domain entries, which must be either a prefix or suffix. This
limitation greatly simplifies the virtual host matching logic, but it
is also inherently limiting.

This change introduces a repeated list of "host simplification rules"
at the RouteConfiguration level, that provide a way to substitute away
other dynamic portions of the domain without changing what is sent
upstream.

For example, to match something like
`*.foo.*.example.org` you might write a simplification rule like:
`([^.]+[.]foo[.])([^.]+)([.]example[.]org)` with a substitution of
`\1bar\3`. This then allows a virtual host domain entry of
`*.foo.bar.example.org` to match
`baz.foo.bar.example.org` or `wowza.foo.qux.example.org`.

Host simplification rules are processed in the order they are defined.

Signed-off-by: Ryan Anderson <ryan@michonline.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -359,5 +359,10 @@ new_features:
     Added a new metric ``db_build_epoch`` to track the build timestamp of the MaxMind geolocation database files.
     This can be used to monitor the freshness of the databases currently in use by the filter.
     See `MaxMind DB build_epoch <https://maxmind.github.io/MaxMind-DB/#build_epoch>`_ for more details.
+- area: http
+  change: |
+    Added support for :ref:`host_simplification_rules <envoy_v3_api_field_config.route.v3.RouteConfiguration.host_simplification_rules>` to allow for
+    regular expression substitutions to "simplify" a host before doing
+    virtual host matching.
 
 deprecated:
