docs: drop manager_config from FS YAML include; add guidance
- Remove manager_config from the FileSystemHttpCache example to avoid
  relying on a thread-pool manager that isn't available everywhere
  (e.g., the docs config test environment)
- Add an inline comment noting manager_config is required in deployments
  and include a minimal manager_config example (thread_pool with
  thread_count: 2)
- No change to the sliced literalinclude on the cache filter page

Signed-off-by: Renin John <224198430+reninjohn@users.noreply.github.com>

--- a/docs/root/configuration/http/http_filters/_include/http-cache-configuration-fs.yaml
+++ b/docs/root/configuration/http/http_filters/_include/http-cache-configuration-fs.yaml
@@ -32,8 +32,12 @@ static_resources:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.cache.v3.CacheConfig
                       typed_config:
                         "@type": type.googleapis.com/envoy.extensions.http.cache.file_system_http_cache.v3.FileSystemHttpCacheConfig
-                        manager_config:
-                          thread_pool: {} # use defaults
+                        # manager_config is required for the File System backend; omitted here
+                        # because the thread-pool manager isn't available in all environments.
+                        # Configure it in deployments, for example:
+                        # manager_config:
+                        #   thread_pool:
+                        #     thread_count: 2
                         cache_path: /var/cache/envoy
                         max_cache_size_bytes: 1073741824 # 1 GiB
                   - name: envoy.filters.http.router
