mobile: decouple DNS refresh and explicit pool drain upon network change  (#40847)
Commit Message: Explicitly drain connection pools regardless of whether
we disable DNS refresh or not upon network change events. Draining
connection pools itself is already behind a runtime guard
`envoy.reloadable_features.drain_pools_on_network_change`. Enabling it
without disable DNS refresh should allow us both drain pools and refresh
DNS.

This is the original behavior but accidentally removed in
https://github.com/envoyproxy/envoy/pull/38531 and added back with
`disable_dns_refresh_on_network_change_` dependency in
https://github.com/envoyproxy/envoy/pull/39418.

Also disable request rehashing upon network change achieved via
`NetworkTypeSocketOptionImpl` in ConnectivityManagerImpl. Rehashing new
requests has the equivalent effect as explicitly draining any existing
connections. And explicitly draining connections is more robust to
network changes between same type. If
`envoy.reloadable_features.decouple_explicit_drain_pools_and_dns_refresh`
and `envoy.reloadable_features.drain_pools_on_network_change` both true,
we know connections have been drained by the engine and
ConnectivityManagerImpl shouldn't need to create a
NetworkTypeSocketOptionImpl using current network type to rehash new
requests.

Additional Message: Also fix JniLibrary.isRuntimeFeatureEnabled() by
renaming it to runTimeFeatureEnabled() to match its native
implementation
`Java_io_envoyproxy_envoymobile_engine_JniLibrary_runtimeFeatureEnabled()`.

Risk Level: medium
Testing: modified existing unit and integration tests
Docs Changes: N/A
Release Notes: Y
Platform Specific Features: N/A
Runtime guard:
envoy.reloadable_features.decouple_explicit_drain_pools_and_dns_refresh

---------

Signed-off-by: Dan Zhang <danzh@google.com>
Co-authored-by: Dan Zhang <danzh@google.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -41,6 +41,11 @@ minor_behavior_changes:
   change: |
     turn off HTTP/3 happy eyeball in upstream via runtime guard ``envoy.reloadable_features.http3_happy_eyeballs``.
     It is found to favor TCP over QUIC when UDP does not work on v6 network but works on v4.
+- area: mobile
+  change: |
+    Explicitly drain connections upon network change events regardless of whether the DNS cache is refreshed or not. This behavior
+    can be reverted by setting the runtime guard ``envoy.reloadable_features.decouple_explicit_drain_pools_and_dns_refresh``
+    to false.
 - area: http
   change: |
     Adds accounting for decompressed HTTP header bytes sent and received. Existing stats only count wire-encoded header bytes.
