--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -52,6 +52,11 @@ minor_behavior_changes:
     This can be accessed through the ``%UPSTREAM_DECOMPRESSED_HEADER_BYTES_RECEIVED%``,
     ``%DOWNSTREAM_DECOMPRESSED_HEADER_BYTES_RECEIVED%``, ``%UPSTREAM_DECOMPRESSED_HEADER_BYTES_SENT%``, and the
     ``%DOWNSTREAM_DECOMPRESSED_HEADER_BYTES_SENT%`` access_log command operators.
+- area: ext_proc
+  change: |
+    If :ref:`failure_mode_allow <envoy_v3_api_field_extensions.filters.http.ext_proc.v3.ExternalProcessor.failure_mode_allow>` is true,
+    save the grpc failure status code returned from the ext_proc server in the filter state.
+    Previously all fail-open cases would return call_status Grpc::Status::Aborted.
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
