make reverse_connection resolver an extension
Signed-off-by: Basundhara Chakrabarty <basundhara.c@nutanix.com>

--- a/source/extensions/bootstrap/reverse_tunnel/downstream_socket_interface/BUILD
+++ b/source/extensions/bootstrap/reverse_tunnel/downstream_socket_interface/BUILD
@@ -28,7 +28,7 @@ envoy_cc_library(
     ],
 )
 
-envoy_cc_library(
+envoy_cc_extension(
     name = "reverse_connection_resolver_lib",
     srcs = ["reverse_connection_resolver.cc"],
     hdrs = ["reverse_connection_resolver.h"],
