--- a/source/extensions/filters/common/ext_authz/BUILD
+++ b/source/extensions/filters/common/ext_authz/BUILD
@@ -44,6 +44,7 @@ envoy_cc_library(
         "//source/common/network:utility_lib",
         "//source/common/protobuf",
         "//source/common/tracing:http_tracer_lib",
+        "//source/common/local_info:local_info_lib",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/http/ext_authz/v3:pkg_cc_proto",
         "@envoy_api//envoy/service/auth/v3:pkg_cc_proto",
@@ -63,6 +64,7 @@ envoy_cc_library(
         "//source/common/http:async_client_lib",
         "//source/common/http:codes_lib",
         "//source/common/tracing:http_tracer_lib",
+        "//source/common/local_info:local_info_lib",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/http/ext_authz/v3:pkg_cc_proto",
         "@envoy_api//envoy/service/auth/v3:pkg_cc_proto",
@@ -81,6 +83,9 @@ envoy_cc_library(
         "//envoy/http:filter_interface",
         "//envoy/upstream:cluster_manager_interface",
         "//source/common/grpc:async_client_lib",
+        "//source/common/common:base64_lib",
+        "//source/common/common:logger_lib",
+        "//source/common/local_info:local_info_lib",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/service/auth/v3:pkg_cc_proto",
     ],
