--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -284,6 +284,13 @@ new_features:
     :ref:`grpc_service <envoy_v3_api_field_extensions.filters.http.ext_authz.v3.CheckSettings.grpc_service>`
     in the per-route ``check_settings``. Routes without this configuration continue to use the default
     authorization service.
+- area: ext_authz
+  change: |
+    Added :ref:`include_peer_metadata_headers <envoy_v3_api_field_extensions.filters.http.ext_authz.v3.ExtAuthz.include_peer_metadata_headers>`
+    to the ``ext_authz`` HTTP filter. When enabled, the filter includes downstream peer identity/metadata
+    in authorization requests as headers (for HTTP services) or gRPC initial metadata (for gRPC services).
+    This enables out-of-band policy and telemetry correlation in external authorization services.
+    The feature is disabled by default and includes an 8 KB size cap on the serialized metadata.
 - area: tracing
   change: |
     Added :ref:`trace_context_option <envoy_v3_api_field_config.trace.v3.ZipkinConfig.trace_context_option>` enum
