fix: add missing test dependencies and fix include order
Signed-off-by: Matthew McLeod <mail@matthewmcleod.co.uk>

--- a/test/extensions/filters/common/ext_authz/BUILD
+++ b/test/extensions/filters/common/ext_authz/BUILD
@@ -35,8 +35,13 @@ envoy_cc_test(
     srcs = ["ext_authz_grpc_impl_test.cc"],
     rbe_pool = "6gig",
     deps = [
+        "//source/common/common:base64_lib",
         "//source/extensions/filters/common/ext_authz:ext_authz_grpc_lib",
         "//test/extensions/filters/common/ext_authz:ext_authz_test_common",
+        "//test/mocks/grpc:grpc_mocks",
+        "//test/mocks/network:network_mocks",
+        "//test/mocks/ssl:ssl_mocks",
+        "//test/mocks/stream_info:stream_info_mocks",
         "//test/mocks/tracing:tracing_mocks",
         "@envoy_api//envoy/service/auth/v3:pkg_cc_proto",
         "@envoy_api//envoy/type/v3:pkg_cc_proto",
@@ -48,10 +53,13 @@ envoy_cc_test(
     srcs = ["ext_authz_http_impl_test.cc"],
     rbe_pool = "6gig",
     deps = [
+        "//source/common/common:base64_lib",
         "//source/common/formatter:formatter_extension_lib",
         "//source/extensions/filters/common/ext_authz:ext_authz_http_lib",
         "//test/extensions/filters/common/ext_authz:ext_authz_test_common",
+        "//test/mocks/network:network_mocks",
         "//test/mocks/server:server_factory_context_mocks",
+        "//test/mocks/ssl:ssl_mocks",
         "//test/mocks/stream_info:stream_info_mocks",
         "//test/mocks/upstream:cluster_manager_mocks",
         "@envoy_api//envoy/extensions/filters/http/ext_authz/v3:pkg_cc_proto",
