ext_authz: add peer metadata headers support
This change adds support for including peer metadata headers in external
authorization requests. The headers include:
- x-envoy-peer-metadata-id: The node ID from local info
- x-envoy-peer-metadata: Base64-encoded node metadata

The implementation updates both HTTP and gRPC clients to include these
headers when making authorization requests.

Risk Level: Low
Testing: Unit tests added for both HTTP and gRPC implementations
Docs Changes: N/A
Release Notes: Added peer metadata headers to external authorization requests

Signed-off-by: Matthew McLeod <mail@matthewmcleod.co.uk>

--- a/test/extensions/filters/common/ext_authz/BUILD
+++ b/test/extensions/filters/common/ext_authz/BUILD
@@ -39,6 +39,7 @@ envoy_cc_test(
         "//source/extensions/filters/common/ext_authz:ext_authz_grpc_lib",
         "//test/extensions/filters/common/ext_authz:ext_authz_test_common",
         "//test/mocks/grpc:grpc_mocks",
+        "//test/mocks/local_info:local_info_mocks",
         "//test/mocks/network:network_mocks",
         "//test/mocks/ssl:ssl_mocks",
         "//test/mocks/stream_info:stream_info_mocks",
@@ -57,6 +58,7 @@ envoy_cc_test(
         "//source/common/formatter:formatter_extension_lib",
         "//source/extensions/filters/common/ext_authz:ext_authz_http_lib",
         "//test/extensions/filters/common/ext_authz:ext_authz_test_common",
+        "//test/mocks/local_info:local_info_mocks",
         "//test/mocks/network:network_mocks",
         "//test/mocks/server:server_factory_context_mocks",
         "//test/mocks/ssl:ssl_mocks",
