--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -78,6 +78,10 @@ bug_fixes:
     Fixed a bug where the premature resets of streams may result in the recursive draining and potential
     stack overflow. Setting proper ``max_concurrent_streams`` value for HTTP/2 or HTTP/3 could eliminate
     the risk of the stack overflow before this fix.
+- area: http
+  change: |
+    Fixed a bug where the ``response_headers_to_add`` may be processed multiple times for the local responses from
+    the router filter.
 - area: listeners
   change: |
     Fixed issue where :ref:`TLS inspector listener filter <config_listener_filters_tls_inspector>` timed out
