switch to use unified matcher
Signed-off-by: Xuyang Tao <taoxuy@google.com>

--- a/api/envoy/extensions/stat_sinks/open_telemetry/v3/BUILD
+++ b/api/envoy/extensions/stat_sinks/open_telemetry/v3/BUILD
@@ -10,5 +10,6 @@ api_proto_package(
         "//envoy/type/matcher/v3:pkg",
         "@com_github_cncf_xds//udpa/annotations:pkg",
         "@opentelemetry_proto//:common_proto",
+               "@com_github_cncf_xds//xds/type/matcher/v3:pkg",
     ],
 )
